# NoisyVideo

./: .env  .gitignore  README.md  built_datasets.py  demo.py  evaluation.py  evaluation_object.py  evaluation_qtype.py  evaluation_subject.py  ex.py  prebuilt_datasets.py  pyproject.toml  requirements.txt  run.py  run.sh  to_csv.py  utils.py
Ask-Anything/: demo.py  run.py
Ask-Anything/video_noise/: occlusion.py  visual_quality.py
Ask-Anything/vlmeval/: inference_video.py
Ask-Anything/vlmeval/dataset/utils/: judge_util.py
Chat-UniVi/: pyproject.toml
Chat-UniVi/ChatUniVi/: constants.py
LLaMA-VID/: pyproject.toml
LLaVA/: .gitignore  pyproject.toml
Video-ChatGPT/data/: generate_instruction_qa_human_assisted.py
Video-ChatGPT/video_chatgpt/: inference.py
Video-ChatGPT/video_chatgpt/eval/: model_utils.py
docs/: QuickStart.md
scripts/: batch_generator.sh  batch_run.sh
video_noise/: __init__.py  blur.py  compress.py  digital_process.py  nature.py  noise_applier.py  occlusion.py  scene_interference.py  temporal.py  utils.py  visual_quality.py
vlmeval/: config.py
vlmeval/api/: base.py  gpt.py
vlmeval/dataset/utils/: judge_util.py
vlmeval/vlm/: base.py
vlmeval/vlm/qwen2_vl/: model.py
vlmeval/vlm/video_llm/: chat_uni_vi.py  llama_vid.py  pllava.py  video_chatgpt.py  video_llava.py  videochat2.py
