[project]
name = "vlmevalkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.6.0",
    "decord>=0.6.0 ; platform_machine != 'arm64'",
    "eva-decord>=0.6.1 ; platform_machine == 'arm64'",
    "gradio>=4.44.1",
    "huggingface-hub>=0.30.2",
    "imageio>=2.37.0",
    "importlib-metadata>=8.6.1",
    "matplotlib>=3.9.4",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "openai>=1.72.0",
    "opencv-python>=4.4.0.46",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "portalocker>=3.1.1",
    "protobuf>=6.30.2",
    "pyav>=14.1.0",
    "python-dotenv>=1.1.0",
    "qwen-vl-utils[decord]==0.0.8",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "sentencepiece>=0.2.0",
    "setuptools>=78.1.0",
    "sty>=1.0.6",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "timeout-decorator>=0.5.0",
    "torch==2.3.0",
    "torchvision==0.18.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.1",
    "typing-extensions>=4.13.1",
    "ultralytics>=8.3.105",
    "validators>=0.34.0",
    "xlsxwriter>=3.2.2",
]

[dependency-groups]
dev = [
    "vlmevalkit",
]

[tool.uv.sources]
vlmevalkit = { workspace = true }
